--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,74 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+base {
+  margin: 0px;
+  padding: 0px;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+}
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.nav-menuright{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32px;
+  padding-left: 40px;
+}
+.nav-menuright ul {
+  display: flex;
+  text-decoration: none;
+  color: white;
+  list-style: none;
+  padding-left: 60px;
+}
+.nav-menuright ul li a{
+text-decoration: none;
+color: white;
+padding: 15px;
+font-size: 16px;
+}
+.nav-logo{
+  width: 36px;
+  height: 36px;
+  padding-right: 20px;
+  padding-left: 200px;
+}
+.nav-menuleft{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32px;
+}
+.nav-menuleft ul {
+  display: flex;
+  text-decoration: none;
+  color: white;
+  list-style: none;
+  gap: 20px;
+  padding-left: 300px;
+}
+.nav-menuleft ul li a{
+text-decoration: none;
+color: white;
+padding-left: 25px;
+}
+.nav-button {
+  padding-right: 100px;
+}
+.nav-button .btn {
+  background-color: #2B7FFF;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 50px;
 }
