--- a/app/globals.css
+++ b/app/globals.css
@@ -1,109 +1,19 @@
-*{
-  margin: 0px;
-  padding: 0px;
-  border: none;
-<<<<<<< HEAD
-=======
-  color: antiquewhite;
->>>>>>> 6c49a4241ef96e1e2c3b9dd90c6c57230355e705
-}
-body {
-  background-color: black;
-}
-.nav-container {
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-.nav-menuright{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 32px;
-  padding-left: 40px;
-}
-.nav-menuright ul {
-  display: flex;
-  text-decoration: none;
-  color: white;
-  list-style: none;
-  padding-left: 60px;
-}
-.nav-menuright ul li a{
-text-decoration: none;
-color: white;
-padding: 15px;
-font-size: 16px;
-}
-.nav-logo{
-  width: 36px;
-  height: 36px;
-  padding-right: 20px;
-  padding-left: 200px;
-}
-.nav-menuleft{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 32px;
-}
-.nav-menuleft ul {
-  display: flex;
-  text-decoration: none;
-  color: white;
-  list-style: none;
-  gap: 20px;
-  padding-left: 300px;
-}
-.nav-menuleft ul li a{
-text-decoration: none;
-color: white;
-padding-left: 25px;
-}
-.nav-button {
-  padding-right: 100px;
-}
-.nav-button .btn {
-  background-color: #2B7FFF;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 50px;
-}
-.hero-text {
-  color: white;
-  width: 619px;
-  height: 158px;
-  /* angle: 0 deg; */
-  opacity: 1;
-  top: 562px;
-  left: 114px;
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap');
 
+@import "tailwindcss";
+
+@layer base {
+  * {
+    box-sizing: border-box;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+  }
+
+  body {
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: -0.02em;
+  }
 }
-.hero-para {
-    color: white;
-    top: 744px;
-    left: 120px;
-
-    width: 766px;
-    height: 23px;
-
-    opacity: 1;
-    transform: rotate(0deg); 
-
-    font-family: 'Plus Jakarta Sans', sans‑serif;
-    font-weight: 500;            
-    font-style: normal;         
-    font-size: 18px;
-    line-height: 1;              
-    letter-spacing: -0.02em;     
-
-    /* leading-trim: none; */     
-}
-
